fix: attempt to invalidate default browser styles on mobile for consistency

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* .login button,
